Opened 16 years ago

Closed 14 years ago

#2433 closed bug (fixed)

[MediaPlayer] moving slider in MediaPlayer leaves artifacts

Reported by: diver Owned by: marcusoverhagen
Priority: normal Milestone: R1
Component: Applications/MediaPlayer Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Moving slider in MediaPlayer leaves artifacts - dots around timeline.

Attachments (1)

MediaPlayer.png (8.7 KB ) - added by diver 14 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by diver, 16 years ago

This seems to be fixed.

comment:2 by diver, 16 years ago

Please close.

comment:3 by stippi, 16 years ago

Resolution: fixed
Status: newclosed

comment:4 by diver, 16 years ago

Ups, sorry, I've kust managed to reproduce it again.

comment:5 by diver, 16 years ago

Resolution: fixed
Status: closedreopened

by diver, 14 years ago

Attachment: MediaPlayer.png added

comment:6 by diver, 14 years ago

Still here in hrev35569.

comment:7 by stippi, 14 years ago

Resolution: fixed
Status: reopenedclosed

Fixed in hrev35572.

Note: See TracTickets for help on using tickets.