Invalidate one more pixel to the left/right of the slider knowb, to account for anti-aliasing artifacts that extend outside the calculated knob-frame. Fixes #2433.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35572 a95241bf-73f2-0310-859d-f6bbb57e9c96